@@ -1,3 +1,5 @@
+AP-2007-11-06-0: Bugfix:     Added Wallclock Time example query for Postgresql db.
+
 AP-2007-11-05-0: Correction of previous commits
 
 JO-2007-11-01-0: Correction of commit JO-2007-10-24-0
